--- a/package.json
+++ b/package.json
@@ -57,13 +57,16 @@
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.3.0",
     "dotenv-cli": "^6.0.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "eslint-config-prettier": "^8.5.0",
     "keen-slider": "^6.6.2",
+    "postcss": "^8.4.21",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.7.4"
   },
   "dependenciesComments": {
