--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-streetview": "^1.1.1",
     "swr": "^1.3.0",
     "url-join": "^5.0.0",
     "urql": "^3.0.3"
