--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "openid-client": "5.1.7",
     "posthog-js": "^1.35.0",
     "react": "18.2.0",
+    "react-camera-pro": "^1.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-streetview": "^1.1.1",
+    "styled-components": "^5.3.6",
     "swr": "^1.3.0",
     "url-join": "^5.0.0",
     "urql": "^3.0.3"
