--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "posthog-js": "^1.35.0",
     "react": "18.2.0",
     "react-camera-pro": "^1.2.2",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-streetview": "^1.1.1",
