--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-modal-sheet": "^1.10.1",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-streetview": "^1.1.1",
     "styled-components": "^5.3.6",
     "swr": "^1.3.0",
